--- a/BorkowskiJakub/Pages/Users/Download.cshtml
+++ b/BorkowskiJakub/Pages/Users/Download.cshtml
@@ -24,7 +24,7 @@
                             //writer.WriteLine("123");
 
                             //writer.WriteLine("testowy");
-                            writer.WriteLine(reader.GetString(1) + ", " + reader.GetString(2) + ", " + reader.GetDateTime(3).ToString("dd-MM-yyyy") + ", " + "24" + ", " + reader.GetString(4) + ", " + Tytuł);
+                            writer.WriteLine(reader.GetString(1) + ", " + reader.GetString(2) + ", " + reader.GetDateTime(3).ToString("yyyy-MM-dd") + ", " + "24" + ", " + reader.GetString(4) + ", " + Tytuł);
                         }
                     }
                 }
