--- a/BorkowskiJakub/Pages/Users/Edit.cshtml
+++ b/BorkowskiJakub/Pages/Users/Edit.cshtml
@@ -33,10 +33,17 @@
 		</div>
 	</div>
 
-	<div class="row mb-3">
-		<label class="col-sm-3 col-form-label">Data urodzenia (dd-MM-yyyy)</label>
+	<!--<div class="row mb-3">
+		<label class="col-sm-3 col-form-label">Data urodzenia</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control" name="birth_date" value="@Model.userInfo.birth_date">
+			<input type="date" class="form-control" name="birth_date" value="@Model.userInfo.birth_date">
+		</div>
+	</div>-->
+
+	<div class="row mb-3">
+		<label class="col-sm-3 col-form-label">Data urodzenia</label>
+		<div class="col-sm-6">
+			<input type="date" class="form-control" id="birth_date" name="birth_date" value="@Model.userInfo.birth_date">
 		</div>
 	</div>
 
